# lms-tauri

./: .env  .eslintrc.json  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
actions/: get-analytics.ts  get-chapter.ts  get-courses.ts  get-dashboard-courses.ts  get-ids.ts  get-progress.ts
app/: layout.tsx
app/(course)/courses/: page.tsx
app/(course)/courses/[courseId]/: layout.tsx  page.tsx
app/(dashboard)/: ThemeContext.tsx  layout.css  layout.tsx  music.tsx
app/(dashboard)/_components/: logo.tsx  mobile-sidebar.tsx  navbar.tsx  sidebar-item.tsx  sidebar-routes.tsx  sidebar.css  sidebar.tsx
app/api/categories/: route.ts
app/api/courses/: route.ts
app/api/dashboard/: route.ts
app/api/purchase/: route.ts
app/api/search/: route.ts
app/api/uploadthing/: core.ts
app/api/webhook/: route.ts
components/: banner.tsx  course-card.tsx  course-progress.tsx  courses-list.tsx  editor.tsx  file-upload.tsx  icon-badgs.tsx  navbar-routes.tsx  preview.tsx  search-input.tsx
components/modals/: confirm-modal.tsx
components/ui/: combobox.tsx  command.tsx  progress.tsx
lib/: db.ts  utils.ts
prisma/: schema.prisma
prisma/migrations/20241015144049_update/: migration.sql
prisma/migrations/20241201094655_delete_mux/: migration.sql
prisma/migrations/20241201150101_final/: migration.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entities/: Cargo.toml
src-tauri/entities/src/: attachment.rs  category.rs  chapter.rs  course.rs  lib.rs  mux_data.rs  prelude.rs  purchase.rs  stripe_customer.rs  user_progress.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: chapters.rs  courses.rs  lib.rs  other_routes.rs  teacher.rs
src-tauri/src/: api.rs  lib.rs  loader.rs  main.rs  other_routes.rs  textgen.rs
(+104 files in other folders)
