[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
anyhow = "1.0.82"
tokio = "1.37.0"
dotenv = { version = "0.15.0" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2",  features = ["cuda"] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.7.2",  features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["cuda"] }
tokenizers = { version = "0.19.1"}
cudarc = { version = "0.12.1", default-features = false, features = ["cuda-version-from-build-system"] }
fastrand = "1.7"
