[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
entities = { path = "../entities" }
cloudinary = "0.7.0"

[dependencies.sea-orm]
version = "1.1.1" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt"] }
